--- a/zj22-gudao-server/gudao-server-web/src/main/resources/application-dev.properties
+++ b/zj22-gudao-server/gudao-server-web/src/main/resources/application-dev.properties
@@ -1,9 +1,20 @@
 #\u6D4B\u8BD5\u73AF\u5883\u6240\u4F7F\u7528\u7684\u914D\u7F6E\u6587\u4EF6
 #\u542F\u52A8\u7AEF\u53E3
-server.port=9876
+server:
+address: localhost
+port: 9876
 #\u5F00\u542Fdebug
 debug=true
 #\u65E5\u5FD7\u6587\u4EF6
 logging.config=classpath:log4j2_dev.xml
 #gudaotestdb->zgudao-testz:zgudaotestDb2o18z
 #gudaodb->zgudao-gudaoz:ZgudaoDB2o18z
+
+mybatis:
+type-aliases-package: org.rana.example.annotation.entity
+
+datasource:
+url: jdbc:mysql://mysql.db.zj22.me:9084/gudaotestdb
+username: zgudao-testz
+password: zgudaotestDb2o18z
+driver-class-name: com.mysql.jdbc.Driver
