--- a/zj22-gudao-server/gudao-server-web/src/main/resources/application.properties
+++ b/zj22-gudao-server/gudao-server-web/src/main/resources/application.properties
@@ -3,4 +3,7 @@
 spring.application.name=gudao-web-server
 #\u4F7F\u7528\u914D\u7F6E\u6587\u4EF6
 spring.profiles.active=dev
+#dao\u626B\u63CF
+mybatis.mapper-locations=classpath*:mapper/*Mapper.xml
+mybatis.type-aliases-package=me.zj22.gudao.server.web.pojo.dto
 
