--- a/zj22-gudao-server/gudao-server-web/src/main/resources/application-dev.properties
+++ b/zj22-gudao-server/gudao-server-web/src/main/resources/application-dev.properties
@@ -1,20 +1,52 @@
 #\u6D4B\u8BD5\u73AF\u5883\u6240\u4F7F\u7528\u7684\u914D\u7F6E\u6587\u4EF6
 #\u542F\u52A8\u7AEF\u53E3
-server:
-address: localhost
-port: 9876
+#server:
+#address: localhost
+#port: 9876
+server.port = 9876
 #\u5F00\u542Fdebug
-debug=true
+debug = true
 #\u65E5\u5FD7\u6587\u4EF6
-logging.config=classpath:log4j2_dev.xml
+logging.config = classpath:log4j2_dev.xml
 #gudaotestdb->zgudao-testz:zgudaotestDb2o18z
 #gudaodb->zgudao-gudaoz:ZgudaoDB2o18z
-
-mybatis:
-type-aliases-package: org.rana.example.annotation.entity
-
-datasource:
-url: jdbc:mysql://mysql.db.zj22.me:9084/gudaotestdb
-username: zgudao-testz
-password: zgudaotestDb2o18z
-driver-class-name: com.mysql.jdbc.Driver
+#mybatis.type-aliases-package=org.rana.example.annotation.entity
+#
+#datasource:
+#url: jdbc:mysql://mysql.db.zj22.me:9084/gudaotestdb
+#username: zgudao-testz
+#password: zgudaotestDb2o18z
+#driver-class-name: com.mysql.jdbc.Driver
+#
+#\u6570\u636E\u5E93\u7684\u914D\u7F6E
+datasource.url = jdbc:mysql://mysql.db.zj22.me:9084/gudaotestdb?useUnicode=true&amp;characterEncoding=UTF-8&amp;useSSL=true
+datasource.username = zgudao-testz
+datasource.password = zgudaotestDb2o18z
+datasource.driver-class-name = com.mysql.jdbc.Driver
+datasource.type = com.alibaba.druid.pool.DruidDataSource
+datasource.druid.max-active = 4
+datasource.druid.initial-size = 1
+datasource.druid.min-idle = 3
+datasource.druid.max-wait = 60000
+datasource.druid.time-between-eviction-runs-millis = 60000
+datasource.druid.min-evictable-idle-time-millis = 300000
+datasource.druid.test-while-idle = true
+datasource.druid.test-on-borrow = false
+datasource.druid.test-on-return = false
+#
+#\u8DE8\u57DF\u76F8\u5173\u914D\u7F6E
+#\u5141\u8BB8\u7684\u57DF\u540D
+cors.access_control_allow_origin=*
+#\u5141\u8BB8\u7684\u5934(\u8868\u660E\u5B83\u5141\u8BB8\u8DE8\u57DF\u8BF7\u6C42\u5305\u542Bcontent-type\u5934)
+cors.access_control_allow_headers=Content-Type,X-Requested-With,token
+#cors.access_control_allow_headers=*
+#\u5141\u8BB8\u7684\u65B9\u6CD5(\u8868\u660E\u5B83\u5141\u8BB8GET\u3001PUT\u3001DELETE\u7684\u5916\u57DF\u8BF7\u6C42)
+cors.access-control-allow-methods=POST, GET, OPTIONS, DELETE
+#cors.access-control-allow-methods=*
+#\u8FD0\u884C\u5BA2\u6237\u7AEF\u643A\u5E26\u8BC1\u4E66\u5F0F\u8BBF\u95EE\u3002\u901A\u8FC7\u5BF9 Credentials \u53C2\u6570\u7684\u8BBE\u7F6E\uFF0C\u5C31\u53EF\u4EE5\u4FDD\u6301\u8DE8\u57DF Ajax \u65F6\u7684 Cookie\u3002
+#HTTP\u54CD\u5E94\u5934\uFF0C\u51E1\u662F\u6D4F\u89C8\u5668\u8BF7\u6C42\u4E2D\u643A\u5E26\u4E86\u8EAB\u4EFD\u4FE1\u606F\uFF0C\u800C\u54CD\u5E94\u5934\u4E2D\u6CA1\u6709\u8FD4\u56DEAccess-Control-Allow-Credentials: true\u7684\uFF0C\u6D4F\u89C8\u5668\u90FD\u4F1A\u5FFD\u7565\u6B64\u6B21\u54CD\u5E94\u3002
+cors.access_control_allow_credentials=true
+#Access-Control-Max-Age(\u8868\u660E\u57283600\u79D2\u5185,\u4E0D\u9700\u8981\u518D\u53D1\u9001\u9884\u68C0\u9A8C\u8BF7\u6C42,\u53EF\u4EE5\u7F13\u5B58\u8BE5\u7ED3\u679C)
+cors.access_control_max_age=600
+#\u5141\u8BB8\u8DE8\u57DF\u7684api\u8DEF\u5F84
+cors.allow_base_url=/**
