微信相关配置

--- a/zj22-gudao-server/gudao-server-web/src/main/resources/application-dev.properties
+++ b/zj22-gudao-server/gudao-server-web/src/main/resources/application-dev.properties
@@ -50,3 +50,6 @@ cors.access_control_allow_credentials=true
 cors.access_control_max_age=600
 #\u5141\u8BB8\u8DE8\u57DF\u7684api\u8DEF\u5F84
 cors.allow_base_url=/**
+
+#server.context-path= /daoGu
+
