--- a/zj22-gudao-server/gudao-server-web/src/main/resources/application.properties
+++ b/zj22-gudao-server/gudao-server-web/src/main/resources/application.properties
@@ -7,3 +7,34 @@ spring.profiles.active=dev
 mybatis.mapper-locations=classpath*:mapper/*Mapper.xml
 mybatis.type-aliases-package=me.zj22.gudao.server.web.pojo.dto
 
+######\u5FAE\u4FE1\u516C\u4F17\u53F7\u76F8\u5173\u7684\u914D\u7F6E
+
+wechat.app.id=wxbb24da9badb433c2
+#\u5FAE\u4FE1\u516C\u4F17\u53F7\u51ED\u8BC1\u5BC6\u94A5appsecret   b23d12f7f2f07a1041544d9b043684fd
+wechat.app.secret=0adf0045b498c5742529a5c05ed1b9cf
+#\u5FAE\u4FE1\u516C\u4F17\u53F7\u81EA\u5B9A\u4E49\u8BBE\u7F6E\u7684token
+wechat.app.token=yuanpeng
+
+
+wechat.URL=http://yuanpeng.free.ngrok.cc
+
+#wechat.Template.ID=Z6f3U2ZKY5qbIlhwAwC2P5A8eDNljm1MziADHyuW1dI
+wechat.Template.ID=
+
+#EncodingAESKey\u79D8\u94A5\u7684key
+wechat.app.encoding_aes_key=
+
+
+
+#\u5FAE\u4FE1\u652F\u4ED8\u5546\u6237\u53F7
+wechat.mch.id=
+
+#\u79D8\u94A5
+wechat.partner.key=
+
+#\u4EA4\u6613\u7C7B\u578B  JSAPI\uFF0CNATIVE\uFF0CAPP
+wechat.trade.type=JSAPI
+
+#\u652F\u4ED8\u7B7E\u540D
+wechat.key=
+
