--- a/zj22-gudao-server/gudao-server-web/pom.xml
+++ b/zj22-gudao-server/gudao-server-web/pom.xml
@@ -81,7 +81,26 @@
             <artifactId>spring-boot-starter-aop</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.8.0</version>
+        </dependency>
+        <dependency>
+            <groupId>me.zj22</groupId>
+            <artifactId>open</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <!-- 微信API的支持 -->
+        <dependency>
+            <groupId>me.zj22</groupId>
+            <artifactId>wechat</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+
     </dependencies>
+
+
 
     <build>
         <finalName>gudao-server-web</finalName>
