微信授权认证登录，支付配置

--- a/zj22-gudao-server/gudao-server-web/src/main/resources/application-dev.properties
+++ b/zj22-gudao-server/gudao-server-web/src/main/resources/application-dev.properties
@@ -51,5 +51,9 @@ cors.access_control_max_age=600
 #\u5141\u8BB8\u8DE8\u57DF\u7684api\u8DEF\u5F84
 cors.allow_base_url=/**
 
-#server.context-path= /daoGu
+#\u914D\u7F6Ejsp\u6587\u4EF6\u7684\u524D\u7F00\u548C\u540E\u7F00
+#spring.mvc.view.prefix = /WEB-INF/pay/
+#spring.mvc.view.suffix = .jsp
+
+#server.context-path= /gudao
 
