--- a/zj22-gudao-server/gudao-server-web/src/main/resources/application.properties
+++ b/zj22-gudao-server/gudao-server-web/src/main/resources/application.properties
@@ -30,7 +30,13 @@ wechat.app.encoding_aes_key=
 wechat.mch.id=
 
 #\u79D8\u94A5
-wechat.partner.key=
+wechat.mchKey=
+
+#\u8BC1\u4E66\u8DEF\u5F84
+wechat.keyPath=
+
+#\u5FAE\u4FE1\u652F\u4ED8\u5F02\u6B65\u901A\u77E5
+wechat.notifyUrl=http://yuanpeng.free.ngrok.cc/pay/notify
 
 #\u4EA4\u6613\u7C7B\u578B  JSAPI\uFF0CNATIVE\uFF0CAPP
 wechat.trade.type=JSAPI
