--- a/zj22-gudao-server/gudao-server-web/pom.xml
+++ b/zj22-gudao-server/gudao-server-web/pom.xml
@@ -86,16 +86,19 @@
             <artifactId>gson</artifactId>
             <version>2.8.0</version>
         </dependency>
+
+        <!--微信支付-->
         <dependency>
-            <groupId>me.zj22</groupId>
-            <artifactId>open</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <groupId>cn.springboot</groupId>
+            <artifactId>best-pay-sdk</artifactId>
+            <version>1.1.0</version>
         </dependency>
-        <!-- 微信API的支持 -->
+
+        <!--freemarker-->
         <dependency>
-            <groupId>me.zj22</groupId>
-            <artifactId>wechat</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-freemarker</artifactId>
+            <version>1.5.9.RELEASE</version>
         </dependency>
 
     </dependencies>
