--- a/zj22-gudao-server/pom.xml
+++ b/zj22-gudao-server/pom.xml
@@ -123,19 +123,17 @@
                 <version>2.8.0</version>
             </dependency>
 
-            <!-- 微信API的支持 -->
             <dependency>
-                <groupId>me.zj22</groupId>
-                <artifactId>wechat</artifactId>
-                <version>${zj22.wechat.version}</version>
+                <groupId>cn.springboot</groupId>
+                <artifactId>best-pay-sdk</artifactId>
+                <version>1.1.0</version>
             </dependency>
-            <!--Intellij idea开发的话需要安装Lombok plugin，同时设置
-            Setting -> Compiler -> Annotation Processors -> Enable annotation processing勾选 -->
-           <!-- <dependency>
-                <groupId>org.projectlombok</groupId>
-                <artifactId>lombok</artifactId>
-                <scope>provided</scope>
-            </dependency>-->
+
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-starter-freemarker</artifactId>
+            </dependency>
+
 
 
             <!--<dependency>
