--- a/zj22-gudao-server/gudao-server-web/src/main/resources/application-dev.properties
+++ b/zj22-gudao-server/gudao-server-web/src/main/resources/application-dev.properties
@@ -55,7 +55,7 @@ cors.access_control_max_age=600
 cors.allow_base_url=/**
 
 #\u914D\u7F6Ejsp\u6587\u4EF6\u7684\u524D\u7F00\u548C\u540E\u7F00
-#spring.mvc.view.prefix = /WEB-INF/pay/
+#spring.mvc.view.prefix = /static/frontPage/
 #spring.mvc.view.suffix = .jsp
 
 server.context-path= /gudao
